fix: bug where content would overflow upwards on mobile
This commit fixes a mobile bug that would cause the intro card to appear above the viewing window, making it unseeable.

--- a/portfolio-client/src/app/(pages)/(index)/page.module.css
+++ b/portfolio-client/src/app/(pages)/(index)/page.module.css
@@ -1,12 +1,12 @@
 .page {
-  position: relative;
-  overflow: hidden;
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
-  justify-items: center;
-  min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
+  /*position: relative;*/
+  /*overflow: scroll;*/
+  /*!*display: grid;*!*/
+  /*!*grid-template-rows: 20px 1fr 20px;*!*/
+  /*!*justify-items: center;*!*/
+  /*min-height: 100svh;*/
+  /*padding: 80px;*/
+  /*!*gap: 64px;*!*/
 
 }
 
