--- a/portfolio-client/src/app/components/lastfm/lastfm.module.css
+++ b/portfolio-client/src/app/components/lastfm/lastfm.module.css
@@ -5,7 +5,6 @@
     border-radius: 20px;
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
     text-align: left;
-    color: #ffffff; /* font colour */
     margin: 0;
     max-width: 400px;
     background: rgba(44, 30, 30, 0.15);
