--- a/portfolio-client/src/app/styles/globals.css
+++ b/portfolio-client/src/app/styles/globals.css
@@ -5,16 +5,18 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    /*--background: #0a0a0a;*/
+
     --foreground: #ededed;
   }
 }
 
 html, body {
+    background: linear-gradient(135deg, #5a6161, #3e404a);
 }
 
 body {
     color: white;
+    font-size: 18px; /*default font size */
     height: 100vh;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
@@ -23,9 +25,7 @@ body {
     margin: 0;
     min-height: 100vh;
     overflow: scroll;
-    background: linear-gradient(135deg, #5a6161, #3e404a);
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 
